<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/_3sdp"
        android:layout_height="@dimen/_150sdp"
        android:background="@color/toolbar_color" />

    <TextView
        android:id="@+id/tv_storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/storage"
        android:textColor="@color/grey_200"
        android:textSize="@dimen/_12ssp"
        app:fontFamily="@font/roboto_regular" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_storage"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apps"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                app:fontFamily="@font/roboto_regular" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_apps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="6.36 GB"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                app:fontFamily="@font/roboto_regular" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/photos"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                app:fontFamily="@font/roboto_regular" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_photos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="2.37 GB"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                app:fontFamily="@font/roboto_regular" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/audio"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                app:fontFamily="@font/roboto_regular" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_audio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="1.17 GB"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                app:fontFamily="@font/roboto_regular" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_videos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/videos"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                app:fontFamily="@font/roboto_regular" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_videos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="9.64 GB"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                app:fontFamily="@font/roboto_regular" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_other_files"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Other files"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                app:fontFamily="@font/roboto_regular" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_other_files"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="130 MB"
                android:textColor="@color/black"
                android:textSize="@dimen/_11ssp"
                app:fontFamily="@font/roboto_regular" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>