<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_white_bg_gradient">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_uni_scan"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_gradient_bg"
        android:paddingBottom="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="@dimen/_3sdp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/menu"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/menu"
            android:tint="@color/black_text_color"
            app:layout_constraintBottom_toBottomOf="@+id/utilify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/utilify" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_premium_crown"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_crown"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/menu"
            app:layout_constraintEnd_toStartOf="@+id/menu"
            app:layout_constraintTop_toTopOf="@+id/menu" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/utilify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/_30ssp"
            app:fontFamily="@font/amaranth_bold"
            app:layout_constraintEnd_toStartOf="@id/iv_premium_crown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cleanShareScanContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:alpha="0.7"
            android:includeFontPadding="false"
            android:text="@string/app_sub_title"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/_14ssp"
            app:fontFamily="@font/roboto_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/utilify"
            app:layout_constraintTop_toBottomOf="@id/utilify" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_container">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <!-- Scan Section -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/docScan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:visibility="visible"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_12sdp"
                    app:cardElevation="@dimen/_8sdp"
                    app:cardMaxElevation="@dimen/_12sdp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_12sdp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/docScanIcon"
                            android:layout_width="@dimen/_65sdp"
                            android:layout_height="@dimen/_60sdp"
                            android:src="@drawable/ic_scan_hub_new"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/docScanContent"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/scanHub"
                            android:textColor="@color/black_text_color"
                            android:textSize="@dimen/_18ssp"
                            app:fontFamily="@font/roboto_bold"
                            app:layout_constraintEnd_toStartOf="@+id/docScanIcon"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/docScanDesc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:text="@string/scanHub_decs"
                            android:textColor="#555555"
                            android:textSize="@dimen/_11ssp"
                            app:fontFamily="@font/roboto_regular"
                            app:layout_constraintEnd_toStartOf="@+id/docScanIcon"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/docScanContent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/scan_documents"
                            android:textColor="@color/accent_blue"
                            android:textSize="@dimen/_10ssp"
                            android:textAllCaps="true"
                            app:fontFamily="@font/roboto_bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/docScanDesc" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <!-- Boost Section -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/boost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_12sdp"
                    app:cardElevation="@dimen/_8sdp"
                    app:cardMaxElevation="@dimen/_12sdp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_12sdp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/boostIcon"
                            android:layout_width="@dimen/_65sdp"
                            android:layout_height="@dimen/_60sdp"
                            android:src="@drawable/ic_smart_boost"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/boostContent"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/boostX"
                            android:textColor="@color/black_text_color"
                            android:textSize="@dimen/_18ssp"
                            app:fontFamily="@font/roboto_bold"
                            app:layout_constraintEnd_toStartOf="@+id/boostIcon"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/boostDesc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:text="@string/boostX_desc"
                            android:textColor="#555555"
                            android:textSize="@dimen/_11ssp"
                            app:fontFamily="@font/roboto_regular"
                            app:layout_constraintEnd_toStartOf="@+id/boostIcon"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/boostContent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/clean_speed_up"
                            android:textColor="@color/accent_blue"
                            android:textSize="@dimen/_10ssp"
                            android:textAllCaps="true"
                            app:fontFamily="@font/roboto_bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/boostDesc" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_recommended_apps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:includeFontPadding="false"
                android:text="Recommended Apps"
                android:textColor="@color/black_text_color"
                android:textSize="@dimen/_16ssp"
                android:visibility="gone"
                app:fontFamily="@font/roboto_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_tools" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recommended_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:clipToPadding="false"
                android:paddingHorizontal="@dimen/_15sdp"
                android:visibility="gone"
                app:layoutManager="com.cam.scanner.scantopdf.android.pdf.CustomLinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv_recommended_apps"
                tools:listitem="@layout/recommended_app_item" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_everything_you_need"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/everything_you_need_all_in_one"
                android:textColor="#66000000"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintBottom_toTopOf="@+id/appCompatImageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_recommended_app"
                app:layout_constraintVertical_bias="0.9" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/image"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
