<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_refer_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_refer_friend"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_refer_friend" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_refer_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_toEndOf="@id/iv_refer_friend"
            android:text="@string/refer_a_friend"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            app:fontFamily="@font/roboto_regular" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="#E3E3E3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_rate_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/rate_us"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        android:visibility="gone"
        app:fontFamily="@font/roboto_regular" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="#E3E3E3"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rl_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_about_us"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_info" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_toEndOf="@id/iv_about_us"
            android:text="@string/about_us"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            app:fontFamily="@font/roboto_regular" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="#E3E3E3" />

    <RelativeLayout
        android:id="@+id/rl_useful_links"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_useful_links"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_link" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_useful_links"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_toEndOf="@id/iv_useful_links"
            android:text="Useful Links"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            app:fontFamily="@font/roboto_regular" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="#E3E3E3" />

    <RelativeLayout
        android:id="@+id/rl_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_settings"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:padding="@dimen/_3sdp"
            android:tint="@color/black"
            android:src="@drawable/ic_setting_thick" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_toEndOf="@id/iv_settings"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            app:fontFamily="@font/roboto_regular" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="#E3E3E3" />


</LinearLayout>